Remove overly-linked pseudocode references

--- a/technical-report/tech-report.tex
+++ b/technical-report/tech-report.tex
@@ -161,17 +161,17 @@ The \texttt{CAR} dataset proved to be the most interesting. While our algorithm 
 
 \section{Discussion}
 
-Overall, we found that our \ref{algo:DecisionTreeLearning} algorithm performed much worse on datasets with a large amount of interconnected data, such as Tic-Tac-Toe. This may be because, in these problems, an attribute's impact is heavily dependent on all of the other attributes in the data set. For more independent classification problems, such as evaluating cars or mushrooms, our \ref{algo:DecisionTreeLearning} algorithm was very accurate.
+Overall, we found that our DecisionTreeLearning algorithm performed much worse on datasets with a large amount of interconnected data, such as Tic-Tac-Toe. This may be because, in these problems, an attribute's impact is heavily dependent on all of the other attributes in the data set. For more independent classification problems, such as evaluating cars or mushrooms, our DecisionTreeLearning algorithm was very accurate.
 
 One of the concerns in decision tree learning is overfitting. From our results, we saw that the only dataset we started overfitting on was \texttt{TICTACTOE}. This was likely due to the datasets we chose having significant complexity; although \texttt{BALANCE} had the fewest attributes, its classifications relied on combinations of all of them. Our simplest datasets also used synthetic data calculations to provide examples, reducing the amount of noise present in the data; the more complex models were the ones gathered from real-world data and so were at the most risk of overfitting - but the number of attributes was so high that a maximum depth of 10 didn't appear to reach an optimal model selection value.
 
-We were surprised at the discrepancies between our \ref{algo:DecisionTreeLearning} algorithm and the one provided by scikit-learn, as we expected both decision tree algorithms to produce similar results. While an effort was made to impose similar constraints on both algorithms (scikit-learn was used with the ``entropy'' heuristic, as well as the same tree depth constraint), there were a few differences that we were unable to resolve. First, scikit-learn uses ``an optimised version of the CART \cite{DBLP:books/wa/BreimanFOS84} algorithm.''
+We were surprised at the discrepancies between our DecisionTreeLearning algorithm and the one provided by scikit-learn, as we expected both decision tree algorithms to produce similar results. While an effort was made to impose similar constraints on both algorithms (scikit-learn was used with the ``entropy'' heuristic, as well as the same tree depth constraint), there were a few differences that we were unable to resolve. First, scikit-learn uses ``an optimised version of the CART \cite{DBLP:books/wa/BreimanFOS84} algorithm.''
 
-Additionally, scikit-learn could not be used with categorical data. To get around this restriction, we used one-hot encoding for the scikit-learn algorithm. This encoding constructs new columns for each possible value in a categorical data column; these new columns are assigned a value of 1 if the row matches this category, and 0 otherwise. A naive approach of mapping categories to a range of numbers produces biased results, as this imposes an invalid numerical interpretation on the data. One-hot encoding sidesteps this issue by only using boolean values of 0 and 1. Unfortunately, this one-hot encoding caused a negative impact on the depth: scikit-learn's decision tree was forced to be a binary tree, meaning it could not contain as many nodes as our trees for a given depth. Depth constraints thus had more of an impact on scikit-learn than they did on our \ref{algo:DecisionTreeLearning} algorithm.
+Additionally, scikit-learn could not be used with categorical data. To get around this restriction, we used one-hot encoding for the scikit-learn algorithm. This encoding constructs new columns for each possible value in a categorical data column; these new columns are assigned a value of 1 if the row matches this category, and 0 otherwise. A naive approach of mapping categories to a range of numbers produces biased results, as this imposes an invalid numerical interpretation on the data. One-hot encoding sidesteps this issue by only using boolean values of 0 and 1. Unfortunately, this one-hot encoding caused a negative impact on the depth: scikit-learn's decision tree was forced to be a binary tree, meaning it could not contain as many nodes as our trees for a given depth. Depth constraints thus had more of an impact on scikit-learn than they did on our DecisionTreeLearning algorithm.
 
-The algorithm used by scikit-learn resulted in much closer variance than ours; however, scikit tended to maintain a constant variance, while our \ref{algo:DecisionTreeLearning} algorithm decreased in variance as we increased the maximum depth of the tree. This indicated to us that while scikit-learn's algorithm produced consistently good results for most datasets, our algorithm could produce both much better or much worse results for those same datasets.
+The algorithm used by scikit-learn resulted in much closer variance than ours; however, scikit tended to maintain a constant variance, while our DecisionTreeLearning algorithm decreased in variance as we increased the maximum depth of the tree. This indicated to us that while scikit-learn's algorithm produced consistently good results for most datasets, our algorithm could produce both much better or much worse results for those same datasets.
 
-For future work, we would like to make the \texttt{dtl} algorithm more generalized. Rather than inputting a specific flag to use hardcoded data, providing a more extensible interface for users other than ourselves. Additionally, we would be able to more closely emulate scikit-learn's functionality by using one-hot encoding for both our \ref{algo:DecisionTreeLearning} algorithm and scikit-learn. This could provide a more comparable baseline comparison.
+For future work, we would like to make the \texttt{dtl} algorithm more generalized. Rather than inputting a specific flag to use hardcoded data, providing a more extensible interface for users other than ourselves. Additionally, we would be able to more closely emulate scikit-learn's functionality by using one-hot encoding for both our DecisionTreeLearning algorithm and scikit-learn. This could provide a more comparable baseline comparison.
 
 We would also like to implement $\chi^2$ pruning to examine how using both or either of these pruning methods impacts average error.
 
