More last-minute

--- a/technical-report/tech-report.tex
+++ b/technical-report/tech-report.tex
@@ -109,7 +109,7 @@ The foundation of our decision tree algorithm is the one provided by Russell and
   \Return{$tree$}\;
 \end{function}
 
-A two-stage approach was used: first, a decision tree generator was developed, which we named \texttt{dtl}. This program would take in a flag as a command-line argument to determine which of our data sets was represented by the input. As the order of the attributes and classes varied between datasets, we were able to use these flags to significantly simplify the process of importing data by hardcoding in this information. 
+A two-stage approach was used: first, a decision tree generator was developed, which we named \texttt{dtl}. This program would take in a flag as a command-line argument to determine which of our data sets was represented by the input. As the placement of the classification attribute in the data varied between datasets, we were able to use these flags to significantly simplify the process of importing data by hardcoding in this information. 
 
 \subsection{Classification}
 
